[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/jean28518.jTools/jList/jList.gd" type="Script" id=1]

[node name="jList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 572.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 576.0
margin_right = 800.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 691.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 695.0
margin_right = 732.0
margin_bottom = 24.0
text = "Add"

[node name="Remove" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 736.0
margin_right = 800.0
margin_bottom = 24.0
text = "Remove"

[node name="Rename" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 736.0
margin_right = 800.0
margin_bottom = 24.0
text = "Rename"

[node name="Duplicate" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 716.0
margin_right = 816.0
margin_bottom = 24.0
text = "Duplicate"

[node name="Copy" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 820.0
margin_right = 920.0
margin_bottom = 24.0
text = "Copy"

[node name="Paste" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 924.0
margin_right = 1024.0
margin_bottom = 24.0
text = "Paste"

[node name="Save" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 924.0
margin_right = 1024.0
margin_bottom = 24.0
text = "Save"

[node name="Action" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 924.0
margin_right = 1024.0
margin_bottom = 24.0
text = "Custom Action"

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 262.534
margin_top = 239.287
margin_right = -261.466
margin_bottom = -229.713
popup_exclusive = true

[node name="Label" type="Label" parent="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 22.0
margin_right = -11.0
margin_bottom = -44.0
text = "Lorem ipsum..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Okay" type="Button" parent="PopupDialog"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 106.697
margin_top = -41.8306
margin_right = -95.3033
margin_bottom = -21.8306
text = "Okay"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_activated" from="VBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="multi_selected" from="VBoxContainer/ItemList" to="." method="_on_ItemList_multi_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Rename" to="." method="_on_Rename_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Duplicate" to="." method="_on_Duplicate_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Copy" to="." method="_on_Copy_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Paste" to="." method="_on_Paste_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Action" to="." method="_on_Action_pressed"]
[connection signal="pressed" from="PopupDialog/Okay" to="." method="_on_PopupDiaglog_Okay_pressed"]
